gitops/espresso/infrastructure/configs/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: gateway
spec:
  ports:
    - port: 8581
      targetPort: 8581
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homebridge
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8581
