gitops/espresso/infrastructure/configs/homebridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - homebridge.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: homebridge
          port: 8581
